Fix spacing variables

--- a/defaults/spacing.less
+++ b/defaults/spacing.less
@@ -35,63 +35,63 @@
 }
 
 .pad-small {
-  padding: @small_perc;
+  padding: var(--spacer-small);
 }
 
 .pad-h-small {
-  padding-left: @small_perc;
-  padding-right: @small_perc;
+  padding-left: var(--spacer-small);
+  padding-right: var(--spacer-small);
 }
 
 .pad-v-small {
-  padding-top: @small_perc;
-  padding-bottom: @small_perc;
+  padding-top: var(--spacer-small);
+  padding-bottom: var(--spacer-small);
 }
 
 .pad-l-small {
-  padding-left: @small_perc;
+  padding-left: var(--spacer-small);
 }
 
 .pad-r-small {
-  padding-right: @small_perc;
+  padding-right: var(--spacer-small);
 }
 
 .pad-t-small {
-  padding-top: @small_perc;
+  padding-top: var(--spacer-small);
 }
 
 .pad-b-small {
-  padding-bottom: @small_perc;
+  padding-bottom: var(--spacer-small);
 }
 
 .pad-tiny {
-  padding: @tiny_perc;
+  padding: var(--spacer-tiny);
 }
 
 .pad-h-tiny {
-  padding-left: @tiny_perc;
-  padding-right: @tiny_perc;
+  padding-left: var(--spacer-tiny);
+  padding-right: var(--spacer-tiny);
 }
 
 .pad-v-tiny {
-  padding-top: @tiny_perc;
-  padding-bottom: @tiny_perc;
+  padding-top: var(--spacer-tiny);
+  padding-bottom: var(--spacer-tiny);
 }
 
 .pad-l-tiny {
-  padding-left: @tiny_perc;
+  padding-left: var(--spacer-tiny);
 }
 
 .pad-r-tiny {
-  padding-right: @tiny_perc;
+  padding-right: var(--spacer-tiny);
 }
 
 .pad-t-tiny {
-  padding-top: @tiny_perc;
+  padding-top: var(--spacer-tiny);
 }
 
 .pad-b-tiny {
-  padding-bottom: @tiny_perc;
+  padding-bottom: var(--spacer-tiny);
 }
 
 .mar {
@@ -125,63 +125,63 @@
 }
 
 .mar-small {
-  margin: @small_perc;
+  margin: var(--spacer-small);
 }
 
 .mar-h-small {
-  margin-left: @small_perc;
-  margin-right: @small_perc;
+  margin-left: var(--spacer-small);
+  margin-right: var(--spacer-small);
 }
 
 .mar-v-small {
-  margin-top: @small_perc;
-  margin-bottom: @small_perc;
+  margin-top: var(--spacer-small);
+  margin-bottom: var(--spacer-small);
 }
 
 .mar-l-small {
-  margin-left: @small_perc;
+  margin-left: var(--spacer-small);
 }
 
 .mar-r-small {
-  margin-right: @small_perc;
+  margin-right: var(--spacer-small);
 }
 
 .mar-t-small {
-  margin-top: @small_perc;
+  margin-top: var(--spacer-small);
 }
 
 .mar-b-small {
-  margin-bottom: @small_perc;
+  margin-bottom: var(--spacer-small);
 }
 
 .mar-tiny {
-  margin: @tiny_perc;
+  margin: var(--spacer-tiny);
 }
 
 .mar-h-tiny {
-  margin-left: @tiny_perc;
-  margin-right: @tiny_perc;
+  margin-left: var(--spacer-tiny);
+  margin-right: var(--spacer-tiny);
 }
 
 .mar-v-tiny {
-  margin-top: @tiny_perc;
-  margin-bottom: @tiny_perc;
+  margin-top: var(--spacer-tiny);
+  margin-bottom: var(--spacer-tiny);
 }
 
 .mar-l-tiny {
-  margin-left: @tiny_perc;
+  margin-left: var(--spacer-tiny);
 }
 
 .mar-r-tiny {
-  margin-right: @tiny_perc;
+  margin-right: var(--spacer-tiny);
 }
 
 .mar-t-tiny {
-  margin-top: @tiny_perc;
+  margin-top: var(--spacer-tiny);
 }
 
 .mar-b-tiny {
-  margin-bottom: @tiny_perc;
+  margin-bottom: var(--spacer-tiny);
 }
 
 @media @tablet {
